[tool.poetry]
name = "learn-flow"
version = "0.1.0"
description = ""
authors = ["Santo K Thomas <santokalayil@gmail.com>"]
readme = "README.md"
packages = [{include = "learn_flow"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
